js262/test/language/expressions/class/elements/syntax/early-errors/grammar-privatename-whitespace-error-member-expr.js


/*---
description: No space allowed between sigil and IdentifierName (MemberExpression) (class expression)
esid: prod-ClassElement
features: [class-fields-private, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Updated Productions

    MemberExpression :
      MemberExpression . PrivateName

    CallExpression :
      CallExpression . PrivateName

    PrivateName ::
      # IdentifierName

---*/


$DONOTEVALUATE();

var C = class {
  #x;
  m() {
    this.# x;
  }
};
